--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <section class="tableWeather d-none" id="tableWeather">
         <div class=" container">
           <div class="tableWeather-contain row">
-            <div class="weather-contain col">
+            <div class="weather-contain col-md col-10 mx-auto">
               <div
                 class="header  p-2 text-center text-white-50"
               >
@@ -102,7 +102,7 @@
                 </span>
               </div>
             </div>
-            <div class="weather-contain weather-contain2 col text-center">
+            <div class="weather-contain weather-contain2 col-md col-10 mx-auto text-center">
               <div
                 class="header header2 p-2 text-center text-white-50"
               >
@@ -121,7 +121,7 @@
                 <div class="custom text-primary my-3" id="secondCondition"></div>
               </div>
             </div>
-            <div class="weather-contain weather-contain3 col text-center">
+            <div class="weather-contain weather-contain3 col-md col-10 mx-auto text-center">
               <div
                 class="header header3 p-2 text-center text-white-50"
               >
