--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
           </form>
         </div>
       </section>
-      <section class="tableWeather d-none" id="tableWeather">
+      <section class="tableWeather" id="tableWeather">
         <div class=" container">
           <div class="tableWeather-contain row">
             <div class="weather-contain col-md col-10 mx-auto">
               <div
-                class="header  p-2 text-center text-white-50"
+                class="header  p-2 d-flex justify-content-between text-white-50"
               >
-                <p id="currentDate">Wednesday</p>
+                <p id="currentDay"></p>
+                <p id="currentDate"></p>
               </div>
               <div
                 class="weathercontent weathercontent1 py-4 px-3 text-white-50"
@@ -106,7 +107,7 @@
               <div
                 class="header header2 p-2 text-center text-white-50"
               >
-                <p id="secondDate"></p>
+                <p id="secondDay"></p>
               </div>
               <div
                 class="weathercontent weathercontent2 py-4 px-2 text-white-50"
@@ -125,7 +126,7 @@
               <div
                 class="header header3 p-2 text-center text-white-50"
               >
-                <p id="thirdDate"></p>
+                <p id="thirdDay"></p>
               </div>
               <div
                 class="weathercontent weathercontent3 py-4 px-2 text-white-50"
